--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -23,10 +23,12 @@
             width: 60px;
         }
 
-        #form{
+        #form {
             background: gold;
         }
     </style>
+
+    <script src="/Web/static/jquery-3.6.1.min.js"></script>
 
 </head>
 <body>
